--- a/src/app/components/basket/basket.component.html
+++ b/src/app/components/basket/basket.component.html
@@ -7,7 +7,9 @@
     <li *ngFor="let order of basket.products">
       <img src="{{ order.product.img }}" alt="" />
       <h2>{{ order.product.name }}</h2>
-      <h3>{{ order.product.cost }}$</h3>
+      <h3>
+        {{ order.product.cost }}$ <span>x{{ order.amount }}</span>
+      </h3>
     </li>
   </ul>
   <div class="basket-result">
