--- a/src/app/components/basket/basket.component.scss
+++ b/src/app/components/basket/basket.component.scss
@@ -64,6 +64,10 @@
       h3 {
         font-size: 10px;
         font-weight: 300;
+
+        span {
+          font-weight: 500;
+        }
       }
     }
   }
