--- a/src/app/pages/order-page/order-page.component.scss
+++ b/src/app/pages/order-page/order-page.component.scss
@@ -168,6 +168,7 @@
       }
     }
     button {
+      cursor: pointer;
       border: none;
       padding: 30px 40px;
       border-radius: 35px;
