--- a/src/app/pages/admin-page/admin-page.component.html
+++ b/src/app/pages/admin-page/admin-page.component.html
@@ -1,5 +1,6 @@
 <div class="container">
   <app-nav-bar></app-nav-bar>
+  <!-- *ngIf="chosenProduct$ | async as chosenProduct" -->
   <div class="admin-main" *ngIf="store$ | async as store">
     <h1>Admin Page</h1>
     <h3>Products</h3>
@@ -10,7 +11,9 @@
       >
         <img src="{{ product.img }}" alt="" />
         <mat-grid-tile-footer
-          [style.backgroundColor]="chosenProduct === product ? '#c6141b' : ''"
+          [style.backgroundColor]="
+            chosenProduct?.id === product.id ? '#c6141b' : ''
+          "
           >{{ product.name }}</mat-grid-tile-footer
         >
       </mat-grid-tile>
@@ -35,6 +38,7 @@
               type="text"
               formControlName="categories"
               class="form-control"
+              readonly
             />
           </div>
           <div class="form-group">
@@ -43,6 +47,7 @@
               type="text"
               formControlName="ingredients"
               class="form-control"
+              readonly
             />
           </div>
           <button>Submit</button>
@@ -51,18 +56,34 @@
     </mat-grid-list>
     <h3>Ingredients</h3>
     <mat-grid-list cols="5" rowHeight="150px" gutterSize="20px">
-      <mat-grid-tile *ngFor="let ingredient of store.main.ingredients">
+      <mat-grid-tile
+        *ngFor="let ingredient of store.main.ingredients"
+        (click)="clickOnIngredient(ingredient)"
+      >
         {{ ingredient.id }}
         <mat-grid-tile-footer
+          [style.backgroundColor]="
+            chosenProduct?.ingredientIds?.includes(ingredient.id)
+              ? '#c6141b'
+              : ''
+          "
           >{{ ingredient.optionName }}
         </mat-grid-tile-footer>
       </mat-grid-tile>
     </mat-grid-list>
     <h3>Categories</h3>
     <mat-grid-list cols="5" rowHeight="150px" gutterSize="20px">
-      <mat-grid-tile *ngFor="let category of store.main.categories">
+      <mat-grid-tile
+        *ngFor="let category of store.main.categories"
+        (click)="clickOnCategory(category)"
+      >
         {{ category.id }}
-        <mat-grid-tile-footer>{{ category.value }}</mat-grid-tile-footer>
+        <mat-grid-tile-footer
+          [style.backgroundColor]="
+            chosenProduct?.categoryIds?.includes(category.id) ? '#c6141b' : ''
+          "
+          >{{ category.value }}</mat-grid-tile-footer
+        >
       </mat-grid-tile>
     </mat-grid-list>
   </div>
