--- a/src/app/pages/order-page/order-page.component.scss
+++ b/src/app/pages/order-page/order-page.component.scss
@@ -146,6 +146,16 @@
     }
   }
 
+  #noProducts {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-weight: 100;
+    font-size: 30px;
+    margin: 30px 0 70px;
+    width: 100%;
+  }
+
   .order-purchase {
     margin-right: 20px;
     padding: 20px 30px;
