--- a/src/app/shared/components/nav-bar/nav-bar.component.html
+++ b/src/app/shared/components/nav-bar/nav-bar.component.html
@@ -1,77 +1,31 @@
 <div class="side-menu">
-  <div class="user-info">
-    <h3>
-      Hello, <span>{{ username }}!</span>
-    </h3>
-    <button (click)="logout()">Logout</button>
+  <div class="up-group">
+    <div class="user-info">
+      <h3>
+        Hello, <span>{{ username }}!</span>
+      </h3>
+      <button (click)="logout()">Logout</button>
+    </div>
+
+    <mat-grid-list cols="1" rowHeight="120px" *ngIf="store$ | async as store">
+      <mat-grid-tile
+        *ngFor="let category of store.categories"
+        [class.tile-selected]="category.id == chosenCategory?.id"
+      >
+        <a routerLink="/menu/{{ category.value }}">
+          <mat-icon aria-hidden="false" aria-label="drink icon">{{
+            category.icon
+          }}</mat-icon>
+          <mat-grid-tile-footer> {{ category.value }}s </mat-grid-tile-footer>
+        </a>
+      </mat-grid-tile>
+    </mat-grid-list>
   </div>
 
-  <mat-grid-list cols="1" rowHeight="120px">
-    <mat-grid-tile
-      [style.backgroundColor]="
-        chosenCategory?.value == 'drink' ? '#c6141b' : ''
-      "
-    >
-      <a routerLink="/menu/drink">
-        <mat-icon
-          aria-hidden="false"
-          aria-label="drink icon"
-          [style.color]="chosenCategory?.value == 'drink' ? 'white' : ''"
-          >local_drink</mat-icon
-        >
-        <mat-grid-tile-footer
-          [style.backgroundColor]="
-            chosenCategory?.value == 'drink' ? '#c6141b' : ''
-          "
-          [style.color]="chosenCategory?.value == 'drink' ? 'white' : ''"
-        >
-          Drink
-        </mat-grid-tile-footer>
-      </a>
-    </mat-grid-tile>
-    <mat-grid-tile
-      [style.backgroundColor]="
-        chosenCategory?.value == 'burger' ? '#c6141b' : ''
-      "
-    >
-      <a routerLink="/menu/burger">
-        <mat-icon
-          aria-hidden="false"
-          aria-label="drink icon"
-          [style.color]="chosenCategory?.value == 'burger' ? 'white' : ''"
-          >lunch_dining</mat-icon
-        >
-        <mat-grid-tile-footer
-          [style.backgroundColor]="
-            chosenCategory?.value == 'burger' ? '#c6141b' : ''
-          "
-          [style.color]="chosenCategory?.value == 'burger' ? 'white' : ''"
-        >
-          Burger
-        </mat-grid-tile-footer>
-      </a>
-    </mat-grid-tile>
-    <mat-grid-tile
-      [style.backgroundColor]="
-        chosenCategory?.value == 'desert' ? '#c6141b' : ''
-      "
-    >
-      <a routerLink="/menu/desert">
-        <mat-icon
-          aria-hidden="false"
-          aria-label="drink icon"
-          [style.color]="chosenCategory?.value == 'desert' ? 'white' : ''"
-          >bakery_dining</mat-icon
-        >
-        <mat-grid-tile-footer
-          [style.backgroundColor]="
-            chosenCategory?.value == 'desert' ? '#c6141b' : ''
-          "
-          [style.color]="chosenCategory?.value == 'desert' ? 'white' : ''"
-        >
-          Desert
-        </mat-grid-tile-footer>
-      </a>
-    </mat-grid-tile>
-  </mat-grid-list>
+  <div class="user-history">
+    <a routerLink="/history">
+      <mat-icon aria-hidden="false" aria-label="drink icon">history</mat-icon>
+      <mat-grid-tile-footer> history </mat-grid-tile-footer>
+    </a>
+  </div>
 </div>
