--- a/src/app/pages/admin-page/admin-page.component.scss
+++ b/src/app/pages/admin-page/admin-page.component.scss
@@ -26,12 +26,38 @@
     max-width: 100%;
   }
 
+  .create-product-button {
+    padding: 20px 40px;
+    // background-color: #cebcbd;
+    background-color: white;
+    cursor: pointer;
+    border: none;
+    border: 1px solid black;
+    font-weight: 500;
+    margin-bottom: 25px;
+  }
+
+  .creation-grid-list {
+    mat-grid-tile {
+      cursor: default;
+    }
+  }
+
   .mat-grid-list {
-    padding: 30px 0;
+    padding-top: 30px;
 
     mat-grid-tile {
       cursor: pointer;
       border: 1px solid black;
+      .selected {
+        background-color: #c6141b;
+        color: white;
+      }
+
+      mat-grid-tile-footer {
+        background-color: #cebcbd;
+        color: black;
+      }
 
       form {
         display: flex;
@@ -59,7 +85,8 @@
         }
 
         button {
-          padding: 15px 20px;
+          margin-top: 30px;
+          padding: 10px 15px;
           background-color: #c6141b;
           color: white;
           border: none;
