--- a/src/app/pages/history-page/history-page.component.scss
+++ b/src/app/pages/history-page/history-page.component.scss
@@ -14,11 +14,98 @@
   padding: 15px 0;
 
   h1 {
-    font-weight: 300;
+    margin: 25px 0;
     font-size: 50px;
-    padding: 25px 0px;
+    font-weight: 300;
   }
 
   .basket-list {
+    list-style: none;
+    padding: 0px 20px 0px 0px;
+
+    // & > li {
+    //   margin: 50px 0px;
+    // }
+
+    .basket-header {
+      // padding: 25px 25px 15px;
+      padding: 15px 25px;
+      background-color: #c6141b;
+      color: white;
+      border-radius: 25px;
+      max-width: 100%;
+      display: flex;
+      justify-content: space-between;
+      align-items: baseline;
+      margin: 50px 0 25px;
+
+      h3 {
+        font-size: 25px;
+        font-weight: 500;
+        margin: 0px;
+      }
+
+      h4 {
+        font-size: 15px;
+        font-weight: 300;
+        margin: 0px;
+      }
+    }
+
+    mat-grid-list {
+      margin: 15px 0;
+
+      mat-grid-tile {
+        border: 1px solid black;
+      }
+
+      .ingredient-list {
+        // list-style: none;
+        width: 100%;
+        height: 70%;
+
+        h4 {
+          margin: 0px;
+          font-weight: 300;
+
+          span {
+            font-size: 12px;
+          }
+          // text-decoration: underline;
+        }
+      }
+
+      mat-grid-tile-footer {
+        height: 85px;
+        padding: 5px 20px;
+        flex-direction: column;
+        align-items: flex-start;
+        background-color: #cebcbd;
+
+        h2 {
+          padding: 15px 0px 3px;
+          font-size: 22px;
+          width: 100%;
+          color: black;
+          font-weight: 500;
+          border-bottom: 1px solid black;
+          margin-bottom: 5px;
+
+          span {
+            font-weight: 300;
+          }
+        }
+
+        .footer-list {
+          padding-top: 7px;
+          list-style: none;
+
+          li {
+            font-weight: 300;
+            color: white;
+          }
+        }
+      }
+    }
   }
 }
