--- a/src/app/pages/order-page/order-page.component.html
+++ b/src/app/pages/order-page/order-page.component.html
@@ -12,13 +12,13 @@
           aria-hidden="false"
           aria-label="drink icon"
           id="removeProductButton"
-          (click)="removeProduct(basketOrder.product.id)"
+          (click)="removeProduct(basketOrder.id)"
           >remove</mat-icon
         >
         <div class="product-info">
           <img src="{{ basketOrder.product.img }}" />
           <h2>{{ basketOrder.product.name }}</h2>
-          <h3>{{ basketOrder.product.cost }}$</h3>
+          <h3>{{ basketOrder.totalPrice }}$</h3>
         </div>
 
         <div class="product-wrapper">
@@ -47,6 +47,49 @@
     <ng-template #noProducts>
       <div id="noProducts">There are no products in the basket yet :(</div>
     </ng-template>
+    <div class="user-info">
+      <div class="invalid-feedback">
+        <ng-container *ngIf="submitted && f.firstName.errors">
+          <div *ngIf="f.firstName.errors?.required">First Name is required</div>
+        </ng-container>
+        <ng-container *ngIf="submitted && f.lastName.errors">
+          <div *ngIf="f.lastName.errors?.required">Last Name is required</div>
+        </ng-container>
+        <ng-container *ngIf="submitted && f.phone.errors">
+          <div *ngIf="f.email.errors?.required">Phone is required</div>
+          <div *ngIf="f.phone.errors?.minlength">Wrong phone length</div>
+        </ng-container>
+        <ng-container *ngIf="submitted && f.email.errors">
+          <div *ngIf="f.email.errors?.required">Email is required</div>
+          <div *ngIf="f.email.errors?.email">Wrong email format</div>
+        </ng-container>
+      </div>
+      <form [formGroup]="form">
+        <h2>ORDER INFO</h2>
+        <div class="form-group">
+          <label>First Name</label>
+          <input type="text" formControlName="firstName" class="form-control" />
+        </div>
+        <div class="form-group">
+          <label>Last Name</label>
+          <input type="text" formControlName="lastName" class="form-control" />
+        </div>
+        <div class="form-group">
+          <label>Phone</label>
+          <input
+            type="text"
+            formControlName="phone"
+            class="form-control"
+            prefix="+38"
+            mask="(000) 000 00 00"
+          />
+        </div>
+        <div class="form-group">
+          <label>Email</label>
+          <input type="text" formControlName="email" class="form-control" />
+        </div>
+      </form>
+    </div>
     <div class="order-purchase">
       <div class="order-total">
         <h2>Total</h2>
