--- a/src/app/pages/order-page/order-page.component.scss
+++ b/src/app/pages/order-page/order-page.component.scss
@@ -156,10 +156,76 @@
     width: 100%;
   }
 
+  .user-info {
+    display: flex;
+    justify-content: flex-end;
+    margin-bottom: 20px;
+
+    .invalid-feedback {
+      margin-right: 30px;
+
+      div {
+        background-color: #c6141b;
+        border-radius: 15px;
+        padding: 15px 20px;
+        margin-bottom: 10px;
+        color: white;
+        font-weight: 300;
+        font-size: 13px;
+      }
+    }
+
+    form {
+      width: 220px;
+      margin-right: 20px;
+      padding: 20px 40px;
+      // background-color: #c6141b;
+      border-radius: 25px;
+      border: 3px solid #c6141b;
+      position: relative;
+
+      h2 {
+        position: absolute;
+        right: -65px;
+        top: 50%;
+        transform: rotate(90deg);
+        font-size: 30px;
+        font-weight: 500;
+        text-align: center;
+        margin-bottom: 25px;
+        letter-spacing: 7px;
+      }
+
+      .form-group {
+        display: flex;
+        flex-direction: column;
+        margin: 20px 0;
+        width: 70%;
+
+        label {
+          // color: #c6141b;
+          color: black;
+          font-size: 18px;
+          font-weight: 300;
+          text-align: end;
+        }
+
+        input {
+          padding: 7px 15px;
+          margin-top: 5px;
+          font-weight: 300;
+        }
+
+        input:focus {
+          outline: none;
+        }
+      }
+    }
+  }
+
   .order-purchase {
     margin-right: 20px;
     padding: 20px 30px;
-    // background-color: #f8f8f7;
     background-color: #c6141b;
     border-radius: 25px;
     height: 110px;
