--- a/src/app/shared/components/nav-bar/nav-bar.component.scss
+++ b/src/app/shared/components/nav-bar/nav-bar.component.scss
@@ -6,13 +6,14 @@
   height: 100%;
   min-height: 100vh;
   position: relative;
+  z-index: 2;
 
   .up-group {
     .user-info {
       max-width: 100%;
       height: 120px;
       padding: 10px;
-      background-color: pink;
+      background-color: #cebcbd;
       display: flex;
       flex-direction: column;
       align-items: center;
